# ashare-agents

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: run_fundamentals.py
src/ashare_agents/: __init__.py  analysts.py  orchestrator.py  portfolio_manager.py  researchers.py  trader.py
tests/: test_orchestrator.py  test_package_api.py
